# bytebox

./: .gitignore  Makefile  compose.dev.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 46a700cb3506_init.py  91bb96cb9888_.py
bytebox/: main.py  settings.py  worker.py
bytebox/auth/: api.py  helpers.py
bytebox/config/: database.py  repository.py  seeder.py  settings.py
bytebox/pipelines/: api.py  models.py  schemas.py  services.py
bytebox/sandbox/: api.py  models.py  schemas.py
bytebox/tasks/: models.py
bytebox/users/: api.py  models.py  repository.py  schemas.py
bytebox/utils/: helpers.py
bytebox/workers/: api.py  models.py  schemas.py
bytebox_apps/master/: Dockerfile  main.py  settings.py
bytebox_apps/master/routers/: execution.py
bytebox_apps/worker/: Dockerfile  main.py
bytebox_core/: docker.py
deployments/: Dockerfile.dev  docker-entrypoint.dev.sh
tests/auth/: test_helpers.py
