[project]
name = "bytebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=5.0.0",
    "docker>=7.1.0",
    "fastapi[standard]>=0.118.0",
    "pyjwt>=2.9.0",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.33.0",
]
